09/25/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: Add new #include of "tgdb_list.h"
   process_commands, implement new TGDB_UPDATE_BREAKPOINTS case.

09/23/2003 Bob Rossi <bob@brasko.net>

   * sources.c: source_vscroll, source_set_sel_line, sets sel_rline 
   to be equal to sel_line

09/21/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: global commandq variable removed.
   process_commands, changed parameter from 'struct queue' to 'struct tgdb'
   gdb_input, removed parameter commandq in call to tgdb_recv_debugger_data
   call process_commands with tgdb instead of commandq
   main, remove initialization of commandq

09/21/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, rename 'Command' to 'tgdb_command'

09/15/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, removed TGDB_QUIT from switch and added
   TGDB_QUIT_NORMAL and TGDB_QUIT_ABNORMAL

09/10/2003 Bob Rossi <bob@brasko.net>

   * helptext.h: Auto-generated because of README change.
   * cgdbrc.c: global ConfigType, add CONFIG_TYPE_FUNC_BOOL to structure.
   added global prototype command_set_stc
   global ConfigVariable, initialized for new variable showtgdbcommands
   added command_set_stc to implement new command
   command_parse_set, added case for CONFIG_TYPE_FUNC_BOOL

09/10/2003 Bob Rossi <bob@brasko.net>

   * interface.c: update_status_win, add cast to remove compiler warning.

09/09/2003 Bob Rossi <bob@brasko.net>

   * cgdbrc.c: command_do_continue, command_do_finish, command_do_next,
   command_do_run, command_do_step, update call to tgdb_run_debugger_command
   to handle new return value properly.
   * interface.c: source_input, internal_if_input, ditto

09/03/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, TGDB_SOURCES_DENIED case, changed comment.

09/03/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: struct tgdb *tgdb, adding global instance of tgdb library.
   start_gdb, update tgdb_initialize to use context for new interface.